Fri Sep 10 17:10:45 1993  Gray Watson  (gray at toaster.antaire.com)

	* Releasing version 1.3.3.

	* Fixed debug value changes in mid-stream.  Repaired configuration
	error with memcpy/bcopy and memcmp/bcmp.

Tue Sep  7 00:49:50 1993  Gray Watson  (gray at toaster.antaire.com)

	* Renamed all error codes to ERROR_*.  Added ERROR_IS_FREE and
	changed some of the already-free errors to this.  Reworded some
	error messages and added free's file/line into to log_bad_pnt.

Mon Aug 30 17:23:47 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added prototypes for _malloc_strcpy, etc. functions to
	malloc_dbg.h per Scott's comments.

Thu Aug 26 19:06:45 1993  Gray Watson  (gray at toaster.antaire.com)

	* Releaced version 1.3.2.  Uploaded to the ftp site.

	* Removed MALLOC_TRACE and malloc_dbg -t.  Replaced by
	MALLOC_ADDRESS:0 functionality and logging of a message every time
	malloc_address is seen.

	* Fixed some dumb const problems.  Have to now preprocess
	malloc_dbg.h from start const.h end.  Yeach!

	* Added MALLOC_LOGFILE feature where %d in the string will be
	replaced with the pid of the process.  Had to add getpid to
	configure and compat.

	* Fixed some problems with compat.h defines.

Tue Aug 24 00:35:49 1993  Gray Watson  (gray at toaster.antaire.com)

	* Releasing version 1.3.1.

	* Added log-ra token to log specific information about non-freed
	memory with only return-address information.

	* Added the beginnings of return-address handling via feedback
	from Dave Hill.  Need to resolve some XXX sections in chunk and
	get more architecture/compiler hacks in return.h.  Along the way
	had to change the malloc_examine() arguments to add ret_attr.

	* Added -L or --list to malloc_dbg to list all the rc-file tags.

	* Fixed some problems in chunk.c via Dave Hill's feedback and
	renamed malloc_str.[ch] to be arg_check.[ch].

Tue Aug 17 16:22:20 1993  Gray Watson  (gray at toaster.antaire.com)

	* Releasing version 1.3.0.
